Revision history for Sys-Syslog

0.34 -- 2016-05-06 -- Sebastien Aperghis-Tramoni (SAPER)

  [Bugfixes]
  - CPAN-RT#105117: use %e where available, fall back to %d and a regexp
    where not (Markus Laker).
  - CPAN-RT#105152: the noeol option was ignored (Markus Laker).
  - CPAN-RT#98446: trailing new line with perror (Alexander Bluhm).
  - CPAN-RT#90538: facility from openlog() is not used (Anton Yuzhaninov).

  [Portability]
  - CPAN-RT#104710: loadable library and perl binaries are mismatched,
    because of missing CCFLAGS (CHORNY, KMX).
  - No longer inheriting from Exporter doesn't work before Perl 5.8.3.
  - CPAN-RT#90212: Support non-Windows platforms where syslog.h is not
    defined (Brian Fraser).
  - CPAN-RT#90224: setlocale() is not available everywhere, for example on
    Android (Brian Fraser).
  - CPAN-RT#90218: getproto*() and getserv*() functions are not available
    everywhere (Brian Fraser).

  [Documentation]
  - CPAN-RT#102058: mention the repository in the documentation.


0.33 -- 2013-05-24 -- Sebastien Aperghis-Tramoni (SAPER)

  [Bugfixes]
  - CPAN-RT#82531: Invalid usage of POSIX::_exit (Alexander Berger).

  [Optimizations]
  - No longer inherit from Exporter.
  - Load Fcntl only when necessary.

  [Documentation]
  - Add links to other logging modules.
  - CPAN-RT#80398: Typo spotted by alfirth@gmail.com
  - Typo spotted by David Steinbrunner.

  [Tests]
  - CPAN-RT#79683: Added delays in t/facilities-routing.t (Jerome Quelin).


0.32 -- 2012-09-14 -- Sebastien Aperghis-Tramoni (SAPER)

  [Bugfixes]
  - CPAN-RT#69040: Don't modify @_ in syslog().
  - Restore compatibility with Perl 5.6.0.

  [Documentation]
  - Perl-RT#81858: Fix some spelling errors (Peter J. Acklam).


0.31 -- 2012-08-18 -- Sebastien Aperghis-Tramoni (SAPER)

  [Bugfixes]
  - Level 'emerg' could not be used since v0.29.
  - Setting a message facility with syslog() was broken since v0.29
    (Noel Butler).